project_folder/public/css/styles.css
/* ... */
#revelstoke-id {
    scroll-margin-top: 340px;
}

#kelowna-id {
    scroll-margin-top: 340px;
}

#destinations-page .gallery {
  display: flex;
  gap: 5px;
  flex-wrap: wrap;
  justify-content: center;
}

#destinations-page .gallery img {
  width: 32%;
  height: 250px;
  object-fit: cover;
  border-radius: 10px;
}

#destinations-page section {
    display: flex;
    flex-direction: column;
    gap: 15px;
    font-family: 'Montserrat', sans-serif;
    max-width: 1000px;
    margin: 30px auto;
    padding: 20px;
    background-color: white;
    border-radius: 12px;
    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
    border-top: 8px solid #ef9656;
}

#destinations-page section h2 {
  margin: 0;
  color: #2e6b3d;
  font-family: 'Montserrat', sans-serif;
}

/* footer content*/

#destinations-page .footer {
    text-align: center;
    font-family: 'Montserrat', sans-serif;
    padding: 18px;
    color: white;
    background-color: #2d6a4f;
    margin-top: 50px;
    border-top: 7px solid #f5893b;
}

@media screen and (width >= 768px) {

  #destinations-page .destinations-navbar {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  #destinations-page .nav-links {
    margin-top: 0; 
  }

  #destinations-page .content-row {
    display: flex;
    justify-content: center;
    gap: 0px;
  }

  #destinations-page .content-row p {
    font-family: 'Montserrat', sans-serif;
    flex: 0.5;                  
    margin: 0;
    padding-right: 30px;
  }

  #whistler-id {
    scroll-margin-top: 100px;
  }

  #vancouver-id {
    scroll-margin-top: 100px;
  }

  #tofino-id {
    scroll-margin-top: 100px;
  }

  #victoria-id {
    scroll-margin-top: 100px;
  }

  #revelstoke-id {
    scroll-margin-top: 100px;
  }

  #kelowna-id {
    scroll-margin-top: 100px;
  }

  #destinations-page .gallery {
    flex: 1.5;
    justify-content: flex-start;
  }

  #destinations-page .gallery img {
    width: 30%;
  }

  a.totem{
    position: fixed;
    bottom: -35px;
    right: -50px;
    z-index: 20;
  }

}

